@@ -327,7 +327,8 @@ int Scintilla_LinkLexers() {
 
 //++Autogenerated -- run src/LexGen.py to regenerate
 //**\(\tLINK_LEXER(\*);\n\)
-LINK_LEXER(lmAda);
+// Not autogenerated for Geany ;-)
+	LINK_LEXER(lmAda);
 	LINK_LEXER(lmAsm);
 	LINK_LEXER(lmBash);
 	LINK_LEXER(lmCaml);
@@ -345,9 +346,10 @@ LINK_LEXER(lmAda);
 	LINK_LEXER(lmLua);
 	LINK_LEXER(lmMake);
 	LINK_LEXER(lmMarkdown);
-	LINK_LEXER(lmMatlab);
+	// We use Octave instead of Matlab
 	LINK_LEXER(lmNsis);
 	LINK_LEXER(lmNull);
+	LINK_LEXER(lmOctave);
 	LINK_LEXER(lmPascal);
 	LINK_LEXER(lmPerl);
 	LINK_LEXER(lmPo);
@@ -357,8 +359,8 @@ LINK_LEXER(lmAda);
 	LINK_LEXER(lmRuby);
 	LINK_LEXER(lmSQL);
 	LINK_LEXER(lmTCL);
-	LINK_LEXER(lmVHDL);
 	LINK_LEXER(lmVerilog);
+	LINK_LEXER(lmVHDL);
 	LINK_LEXER(lmXML);
 	LINK_LEXER(lmYAML);
 
