@@ -1,3 +1,11 @@
+2010-08-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * scintilla/KeyWords.cxx:
+   Link Octave instead of Matlab.
+   Add comment about not being autogenerated.
+   Minor changes to fit Scintilla order.
+
+
 2010-08-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/highlighting.c, src/editor.c:
